@@ -5,6 +5,7 @@
   since they are not actual properties of the class instance.
   Use `responses.mock.assert_all_requests_are_fired`,
   `responses.mock.passthru_prefixes`, `responses.mock.target` instead.
+* Fixed the issue when `reset()` method was called in not stopped mock. See #511
 
 0.19.0
 ------
